apps/external-reverse-proxy/overlays/prod/service-infra-bcm.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-bcm
  namespace: infra
spec:
  type: ExternalName
  externalName: infra-bcm
  ports:
    - port: 443
