apps/external-reverse-proxy/overlays/prod/service-infra-kvm.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-kvm
  namespace: infra
spec:
  type: ExternalName
  externalName: infra-kvm
  ports:
    - port: 443
