apps/external-reverse-proxy/overlays/prod/service-infra-vm.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-vm
  namespace: infra
spec:
  type: ExternalName
  externalName: infra-vm
  ports:
    - port: 443
