apps/external-reverse-proxy/overlays/prod/service-unifi.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: infra
spec:
  type: ExternalName
  externalName: unifi
  ports:
    - port: 443
