apps/external-reverse-proxy/overlays/prod/ingress-route-infra-kvm.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: infra-kvm-ingress
  namespace: infra
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`infra-kvm.sobrinho.pt`)
      kind: Rule
      services:
        - name: infra-kvm
          port: 443
          scheme: https
          serversTransport: traefik-transport-insecure@kubernetescrd
