apps/external-reverse-proxy/overlays/prod/ingress-route-infra-vm-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: infra-vm-ingress-ext
  namespace: infra
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`infra-vm.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: infra-vm
          port: 8006
          scheme: https
          serversTransport: traefik-transport-insecure@kubernetescrd
