apps/external-reverse-proxy/overlays/prod/ingress-route-unifi-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: unifi-ingress-ext
  namespace: infra
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`unifi.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: unifi
          port: 443
          scheme: https
          serversTransport: traefik-transport-insecure@kubernetescrd
